--- a/bin/install
+++ b/bin/install
@@ -375,14 +375,16 @@ function install_cosyverif ()
   mkdir -p "${rockstree}/git"
   {
     ( if [ ! -d "${rockstree}/git/redis-lua" ]; then
-        git clone https://github.com/nrk/redis-lua.git \
+        git clone --depth=1 \
+                  https://github.com/nrk/redis-lua.git \
                   "${rockstree}/git/redis-lua"
       fi
       cd "${rockstree}/git/redis-lua"
       git pull
     )
     ( if [ ! -d "${rockstree}/git/lua-websockets" ]; then
-        git clone https://github.com/saucisson/lua-websockets.git \
+        git clone --depth=1 \
+                  https://github.com/saucisson/lua-websockets.git \
                   "${rockstree}/git/lua-websockets"
       fi
       cd "${rockstree}/git/lua-websockets"
@@ -391,7 +393,8 @@ function install_cosyverif ()
     if [ -z "${sourcepath+x}" ]; then
       ( if [ ! -d "${rockstree}/git/library" ]; then
           rm -rf "${rockstree}/git/library"
-          git clone https://github.com/CosyVerif/library.git \
+          git clone --depth=1 \
+                    https://github.com/CosyVerif/library.git \
                     "${rockstree}/git/library"
         fi
         cd "${rockstree}/git/library"
