Fix uses of mktemp.

--- a/bin/install
+++ b/bin/install
@@ -83,7 +83,7 @@ check=${prefix}/bin/cosy-check
 rockspec=${prefix}/bin/cosy-rockspec
 rockstree=${prefix}/local/cosy
 currentwd=$(pwd)
-tempwd=$(mktemp -d -t cosy-XXXXXX)
+tempwd=$(mktemp -d -t cosy)
 log="${tempwd}/install.log"
 case "${mode}" in
   "server")
@@ -578,7 +578,7 @@ source "\${root}/${base}"
   if [ \$# -ge 1 ]; then
     tmpdir=\${1}
   else
-    tmpdir=\$(mktemp -d -t cosy-check-XXXXXX)
+    tmpdir=\$(mktemp -d -t cosy-check)
   fi
   if [ ! -d "\${tmpdir}" ]; then
     mkdir -p "\${tmpdir}"
@@ -601,7 +601,7 @@ source "\${root}/${base}"
   if [ \$# -ge 1 ]; then
     tmpdir=\${1}
   else
-    tmpdir=\$(mktemp -d -t cosy-rockspec-XXXXXX)
+    tmpdir=\$(mktemp -d -t cosy-rockspec)
   fi
   if [ ! -d "\${tmpdir}" ]; then
     mkdir -p "\${tmpdir}"
