--- a/bin/install
+++ b/bin/install
@@ -562,9 +562,10 @@ EOF
 #! /bin/bash
 
 root=\$(dirname "\$0")
+# shellcheck source=/dev/null
 source "\${root}/${base}"
 (
-  cd "\${COSY_PREFIX}/local/cosy/git/library"
+  cd "\${COSY_PREFIX}/local/cosy/git/library" || exit 1
   git describe
 )
 EOF
@@ -575,6 +576,7 @@ EOF
 #! /bin/bash
 
 root=\$(dirname "\$0")
+# shellcheck source=/dev/null
 source "\${root}/${base}"
 luajit "\${COSY_PREFIX}/local/cosy/5.1/share/lua/5.1/cosy/cli/init.lua" "\$@"
 EOF
@@ -585,6 +587,7 @@ if [ "${mode}" == "server" ]; then
 #! /bin/bash
 
 root=\$(dirname "\$0")
+# shellcheck source=/dev/null
 source "\${root}/${base}"
 luajit "\${COSY_PREFIX}/local/cosy/5.1/share/lua/5.1/cosy/server/cli.lua" "\$@"
 EOF
@@ -595,6 +598,7 @@ fi
 #! /bin/bash
 
 root=\$(dirname "\$0")
+# shellcheck source=/dev/null
 source "\${root}/${base}"
 if [ -e "\${COSY_PREFIX}/bin/cosy-server" ]; then
   "\${COSY_PREFIX}/bin/cosy-server" stop --force
@@ -603,6 +607,7 @@ rm -rf "\${COSY_PREFIX}/bin/cosy"* \
        "\${COSY_PREFIX}/etc/cosy"* \
        "\${COSY_PREFIX}/local/cosy" \
        "\${COSY_PREFIX}/local/openresty"*
+# shellcheck disable=SC2050
 if [ "${mode}" == "client" ]; then
   rm -rf "\${COSY_PREFIX}/bin/c_rehash" \
          "\${COSY_PREFIX}/bin/openssl" \
@@ -618,6 +623,7 @@ if [ "${mode}" == "client" ]; then
          "\${COSY_PREFIX}/share/man/man3/ev.3" \
          "\${COSY_PREFIX}/ssl"
 fi
+# shellcheck disable=SC2034
 for i in {1..10}; do
   find "\${COSY_PREFIX}" -maxdepth 5 -empty -exec rm -rf {} \; \
     > /dev/null 2>&1
@@ -631,6 +637,7 @@ EOF
 #! /bin/bash
 
 root=\$(dirname "\$0")
+# shellcheck source=/dev/null
 source "\${root}/${base}"
 (
   if [ \$# -ge 1 ]; then
@@ -654,6 +661,7 @@ EOF
 #! /bin/bash
 
 root=\$(dirname "\$0")
+# shellcheck source=/dev/null
 source "\${root}/${base}"
 (
   if [ \$# -ge 1 ]; then
@@ -665,7 +673,7 @@ source "\${root}/${base}"
     mkdir -p "\${tmpdir}"
   fi
   shift
-  cd  "\${tmpdir}"
+  cd  "\${tmpdir}" || exit 1
   luajit "\${COSY_PREFIX}/local/cosy/5.1/share/lua/5.1/cosy/rockspec/init.lua" "\$@"
   echo
   echo -e "Rockspec is in ${green}\${tmpdir}${nc}."
@@ -763,6 +771,7 @@ function error ()
 
 mkdir -p "${prefix}"
 mkdir -p "${prefix}/bin"
+mkdir -p "${prefix}/lib"
 cd "${tempwd}" || exit 1
 stop_server
 trap error ERR
