Fix homebrew detection in installed commands.

--- a/bin/install
+++ b/bin/install
@@ -532,8 +532,8 @@ function install_main ()
 
 export COSY_PREFIX="${prefix}"
 
-if [ ! -z "${brew_available}" ]; then
-  HOMEBREW_PREFIX=$(brew config | grep "HOMEBREW_PREFIX" | tr -d ' \t' | cut -d ":" -f 2)
+if command -v "brew" > /dev/null 2&>1; then
+  HOMEBREW_PREFIX=\$(brew config | grep "HOMEBREW_PREFIX" | tr -d ' \t' | cut -d ":" -f 2)
   export LIBRARY_PATH="\${HOMEBREW_PREFIX}/lib:${LIBRARY_PATH}"
   export LD_LIBRARY_PATH="\${HOMEBREW_PREFIX}/lib:${LD_LIBRARY_PATH}"
   export DYLD_LIBRARY_PATH="\${HOMEBREW_PREFIX}/lib:${DYLD_LIBRARY_PATH}"
