Temporary print package.path, package.cpath and list a directory to understand what happens in travis.

--- a/bin/install
+++ b/bin/install
@@ -538,6 +538,10 @@ export LUA_CPATH="\${COSY_PREFIX}/local/cosy/5.1/lib/lua/5.1/?.so"
 export LIBRARY_PATH="\${COSY_PREFIX}/lib:${LIBRARY_PATH}"
 export LD_LIBRARY_PATH="\${COSY_PREFIX}/lib:${LD_LIBRARY_PATH}"
 export DYLD_LIBRARY_PATH="\${COSY_PREFIX}/lib:${DYLD_LIBRARY_PATH}"
+
+luajit -e 'print (package.path)'
+luajit -e 'print (package.cpath)'
+ls -lh \${COSY_PREFIX}/local/cosy/5.1/lib/lua/5.1/
 EOF
   chmod a+x "${path}"
 
