--- a/bin/install
+++ b/bin/install
@@ -468,6 +468,7 @@ function install_cosyverif ()
       # Install luasec before everything to allow the use of HTTPS in luarocks:
       case "${mode}" in
         "server")
+          options=(LDFLAGS="-Wl,--no-as-needed")
           ;;
         "client")
           options=(OPENSSL_DIR="${prefix}" LIBEV_DIR="${prefix}")
